tests/asm/valid/ex1.s
.name "zork"
.comment "just a basic living prog"
		
l2:	
	sti	r1,%:live,%0
live:	live	%1
		
