tests/asm/error/comment_len_2049.s
.name "name"
.comment "
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
123456789.123456789.123456789.123456789.123456789.123456789.123456789.123456789.1234
1234567
"









l2:		sti r1,%:live,%1
		and r1,%0,r1
live:   live %1
		zjmp %:live
